--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-/build
+/build/
 /captures
 .externalNativeBuild
 .gitignore
+.idea/
+*.class
+
