--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
@@ -44,12 +48,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.br.cdr.mercadobarato.MainActivity" />
         </activity>
-        <activity
-            android:name=".NavigationMenuActivity"
-            android:label="@string/title_activity_navigation_menu"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Register" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".InfoActivity" />
+        <activity android:name=".ListProductsActivity"></activity>
     </application>
 
 </manifest>
