--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,8 @@
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".HomeActivity" />
-        <activity android:name=".InfoActivity" />
-        <activity android:name=".ListProductsActivity"></activity>
+        <!--<activity android:name=".InfoActivity" />-->
+        <activity android:name=".NavigationMenuActivity" />
     </application>
 
 </manifest>
