--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.loopj.android:android-async-http:1.4.4'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.beardedhen:androidbootstrap:+'
     testCompile 'junit:junit:4.12'
