--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,16 +41,16 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".activity.MapsActivity"
             android:label="@string/checkin">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.br.cdr.mercadobarato.MainActivity" />
+                android:value="com.br.cdr.mercadobarato.activity.MainActivity" />
         </activity>
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".activity.RegisterActivity" />
+        <activity android:name=".activity.HomeActivity" />
         <!--<activity android:name=".InfoActivity" />-->
-        <activity android:name=".NavigationMenuActivity" />
+        <activity android:name=".activity.NavigationMenuActivity" />
     </application>
 
 </manifest>
