--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
@@ -40,15 +42,15 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".activity.MapsActivity"
-            android:label="@string/checkin">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.br.cdr.mercadobarato.activity.MainActivity" />
-        </activity>
+        <!--<activity-->
+        <!--android:name=".activity.MapsActivity"-->
+        <!--android:label="@string/checkin">-->
+        <!--<meta-data-->
+        <!--android:name="android.support.PARENT_ACTIVITY"-->
+        <!--android:value="com.br.cdr.mercadobarato.activity.MainActivity" />-->
+        <!--</activity>-->
         <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.HomeActivity" />
+        <!--<activity android:name=".activity.HomeActivity" />-->
         <!--<activity android:name=".InfoActivity" />-->
         <activity android:name=".activity.NavigationMenuActivity" />
     </application>
