--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.android.support:design:24.2.1'
     compile 'com.loopj.android:android-async-http:1.4.4'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.beardedhen:androidbootstrap:+'
+    compile 'com.google.code.gson:gson:2.4'
     testCompile 'junit:junit:4.12'
 }
