--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.beardedhen:androidbootstrap:+'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.crystal:crystalrangeseekbar:1.1.1'
     testCompile 'junit:junit:4.12'
 }
