--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.loopj.android:android-async-http:1.4.4'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.beardedhen:androidbootstrap:+'
-    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.crystal:crystalrangeseekbar:1.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'cz.msebera.android:httpclient:4.3.6'
+
 }
