--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,12 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".activity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,7 +51,9 @@
         <!--android:name="android.support.PARENT_ACTIVITY"-->
         <!--android:value="com.br.cdr.mercadobarato.activity.MainActivity" />-->
         <!--</activity>-->
-        <activity android:name=".activity.RegisterActivity" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:screenOrientation="portrait" />
         <!--<activity android:name=".activity.HomeActivity" />-->
         <!--<activity android:name=".InfoActivity" />-->
         <activity android:name=".activity.NavigationMenuActivity" />
