--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.crystal:crystalrangeseekbar:1.1.1'
     compile 'cz.msebera.android:httpclient:4.3.6'
+    compile 'junit:junit:4.12'
+    compile 'com.tarun0.zxing-standalone:zxing-standalone:1.0.0'
 }
