--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,8 +57,7 @@
         <!-- android:value="com.br.cdr.mercadobarato.activity.MainActivity" /> -->
         <!-- </activity> -->
         <activity
-            android:name=".activity.RegisterActivity"
-            android:screenOrientation="portrait" />
+            android:name=".activity.RegisterActivity" />
         <!-- <activity android:name=".activity.HomeActivity" /> -->
         <!-- <activity android:name=".InfoActivity" /> -->
         <activity
